Ignore and Untrack System Files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+sap-ui-cachebuster-info.json
+visual_ext_index.html
+/webapp/visual_ext_index.html
